# rust-studycase

./: Cargo.toml  LICENSE  README.md  trace_origin
examples/: RedisPubsub.rs  enum_AsMultiType.rs  enum_VecFilter.rs  lifetime.rs  method.rs  modematch.rs  parkinglot.rs  serialport.rs  standard_method.rs  string.rs
src/: lib.rs  mod_standard_method.rs
src/mod_RedisPubsub/: mod.rs
src/mod_future_0/: mod.rs
src/mod_redispubsub/: mod.rs
src/mod_serial/: mod.rs
src/mod_serialport/: connect_operations.rs  global_static.rs  load_config.rs  mod.rs
