[package]
name = "rust-studycase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

tokio-serial = "5.4.4"
serialport = "4.2.2"

mio = "0.8.9"
mio-serial = "5.0.5"

parking_lot = "0.12.1"
lazy_static = "1.4.0"

futures = "0.3"
axum = "0.6.20"
redis = { version = "0.23.2", features = ["tokio-comp"] }
futures-util = { version = "0.3.15", default-features = false }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
bytes = "1.5.0"
